dongle-smartcontract/test_results_v10.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
warning: unused import: `Project`
 --> src\verification_registry.rs:8:20
  |
8 | use crate::types::{Project, VerificationRecord, VerificationStatus};
  |                    ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:3:5
  |
3 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::types::VerificationStatus`
 --> src\test.rs:4:5
  |
4 | use crate::types::VerificationStatus;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

warning: unused import: `crate::errors::ContractError`
 --> src\verification_tests.rs:5:9
  |
5 |     use crate::errors::ContractError;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\review_registry.rs:126:13
    |
126 |         let mut user_reviews: soroban_sdk::Vec<u64> = env
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `unwrap` found for type `u64` in the current scope
  --> src\verification_tests.rs:32:11
   |
24 |           let project_id = client.register_project(
   |  __________________________-
25 | |             &owner,
26 | |             &project_name,
27 | |             &String::from_str(&env, "Description... Description... Description... Description..."),
...  |
31 | |             &None,
32 | |         ).unwrap();
   | |          -^^^^^^ method not found in `u64`
   | |__________|
   |

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
  --> src\verification_tests.rs:45:33
   |
45 |         let token_address = env.register_stellar_asset_contract(token_admin);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `mint` found for struct `Client<'a>` in the current scope
  --> src\verification_tests.rs:50:22
   |
50 |         token_client.mint(&owner, &1000);
   |                      ^^^^ method not found in `Client<'_>`

error[E0599]: no method named `unwrap` found for type `u64` in the current scope
  --> src\verification_tests.rs:81:11
   |
73 |           let project_id = client.register_project(
   |  __________________________-
74 | |             &owner,
75 | |             &String::from_str(&env, "Project Y"),
76 | |             &String::from_str(&env, "Description... Description... Description... Description..."),
...  |
80 | |             &None,
81 | |         ).unwrap();
   | |          -^^^^^^ method not found in `u64`
   | |__________|
   |

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
  --> src\verification_tests.rs:85:33
   |
85 |         let token_address = env.register_stellar_asset_contract(token_admin);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `mint` found for struct `Client<'a>` in the current scope
  --> src\verification_tests.rs:87:22
   |
87 |         token_client.mint(&owner, &100);
   |                      ^^^^ method not found in `Client<'_>`

warning: constant `MAX_PROJECTS_PER_USER` is never used
 --> src\constants.rs:4:11
  |
4 | pub const MAX_PROJECTS_PER_USER: u32 = 50;
  |           ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: constant `MIN_STRING_LEN` is never used
 --> src\constants.rs:7:11
  |
7 | pub const MIN_STRING_LEN: usize = 1;
  |           ^^^^^^^^^^^^^^

warning: constant `MAX_NAME_LEN` is never used
  --> src\constants.rs:10:11
   |
10 | pub const MAX_NAME_LEN: usize = 128;
   |           ^^^^^^^^^^^^

warning: constant `MAX_DESCRIPTION_LEN` is never used
  --> src\constants.rs:13:11
   |
13 | pub const MAX_DESCRIPTION_LEN: usize = 2048;
   |           ^^^^^^^^^^^^^^^^^^^

warning: constant `MAX_CATEGORY_LEN` is never used
  --> src\constants.rs:16:11
   |
16 | pub const MAX_CATEGORY_LEN: usize = 64;
   |           ^^^^^^^^^^^^^^^^

warning: constant `MAX_WEBSITE_LEN` is never used
  --> src\constants.rs:19:11
   |
19 | pub const MAX_WEBSITE_LEN: usize = 256;
   |           ^^^^^^^^^^^^^^^

warning: constant `MAX_CID_LEN` is never used
  --> src\constants.rs:22:11
   |
22 | pub const MAX_CID_LEN: usize = 128;
   |           ^^^^^^^^^^^

warning: constant `RATING_MIN` is never used
  --> src\constants.rs:25:11
   |
25 | pub const RATING_MIN: u32 = 1;
   |           ^^^^^^^^^^

warning: constant `RATING_MAX` is never used
  --> src\constants.rs:26:11
   |
26 | pub const RATING_MAX: u32 = 5;
   |           ^^^^^^^^^^

warning: associated function `set_treasury` is never used
  --> src\fee_manager.rs:77:12
   |
11 | impl FeeManager {
   | --------------- associated function in this implementation
...
77 |     pub fn set_treasury(
   |            ^^^^^^^^^^^^

warning: associated functions `add_rating` and `update_rating` are never used
  --> src\rating_calculator.rs:34:12
   |
 8 | impl RatingCalculator {
   | --------------------- associated functions in this implementation
...
34 |     pub fn add_rating(current_sum: u64, current_count: u32, new_rating: u32) -> (u64, u32, u32) {
   |            ^^^^^^^^^^
...
52 |     pub fn update_rating(
   |            ^^^^^^^^^^^^^

warning: associated function `get_reviews_by_user` is never used
   --> src\review_registry.rs:155:12
    |
 12 | impl ReviewRegistry {
    | ------------------- associated function in this implementation
...
155 |     pub fn get_reviews_by_user(
    |            ^^^^^^^^^^^^^^^^^^^

warning: struct `Utils` is never constructed
 --> src\utils.rs:5:12
  |
5 | pub struct Utils;
  |            ^^^^^

warning: multiple associated functions are never used
  --> src\utils.rs:8:12
   |
 7 | impl Utils {
   | ---------- associated functions in this implementation
 8 |     pub fn get_current_timestamp(env: &Env) -> u64 {
   |            ^^^^^^^^^^^^^^^^^^^^^
...
12 |     pub fn is_admin(env: &Env, address: &Address) -> bool {
   |            ^^^^^^^^
...
20 |     pub fn require_admin(env: &Env, address: &Address) -> Result<(), ContractError> {
   |            ^^^^^^^^^^^^^
...
27 |     pub fn validate_string_length(
   |            ^^^^^^^^^^^^^^^^^^^^^^
...
42 |     pub fn is_valid_ipfs_cid(cid: &String) -> bool {
   |            ^^^^^^^^^^^^^^^^^
...
47 |     pub fn is_valid_url(_url: &String) -> bool {
   |            ^^^^^^^^^^^^
...
51 |     pub fn sanitize_string(input: &String) -> String {
   |            ^^^^^^^^^^^^^^^
...
55 |     pub fn is_valid_category(_category: &String) -> bool {
   |            ^^^^^^^^^^^^^^^^^
...
59 |     pub fn validate_pagination(_start_id: u64, limit: u32) -> Result<(), ContractError> {
   |            ^^^^^^^^^^^^^^^^^^^

warning: associated functions `list_pending_verifications`, `verification_exists`, `get_verification_status`, `update_verification_evidence`, `validate_evidence_cid`, and `get_verification_stats` are never used
   --> src\verification_registry.rs:121:12
    |
 16 | impl VerificationRegistry {
    | ------------------------- associated functions in this implementation
...
121 |     pub fn list_pending_verifications(
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
146 |     pub fn verification_exists(env: &Env, project_id: u64) -> bool {
    |            ^^^^^^^^^^^^^^^^^^^
...
150 |     pub fn get_verification_status(
    |            ^^^^^^^^^^^^^^^^^^^^^^^
...
158 |     pub fn update_verification_evidence(
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
167 |     pub fn validate_evidence_cid(evidence_cid: &String) -> Result<(), ContractError> {
    |            ^^^^^^^^^^^^^^^^^^^^^
...
174 |     pub fn get_verification_stats(_env: &Env) -> (u32, u32, u32) {
    |            ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `dongle-contract` (lib test) generated 8 warnings (2 duplicates)
error: could not compile `dongle-contract` (lib test) due to 4 previous errors; 8 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib) generated 17 warnings (run `cargo fix --lib -p dongle-contract` to apply 2 suggestions)
